app/src/main/java/com/example/architecture/bad/myfigurecollection/search/SearchActivity.java
package com.example.architecture.bad.myfigurecollection.search;

import android.app.Activity;
import android.os.Bundle;

import com.example.architecture.bad.myfigurecollection.R;

public class SearchActivity extends Activity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_search);
    }
}

